--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,14 @@ on:
       - main
 jobs:
   test:
+    name: Run tests
     runs-on: [ 'ubuntu-latest', 'windows-latest' ]
     steps:
-      - name: package install
+      - name: checkout code
         uses: actions/checkout@v3
-      - run: npm install
+
+      - name: install packages
+        run: npm install
 
       - name: run test
         run: npm run test
@@ -17,7 +20,11 @@ jobs:
   deploy:
     runs-on: 'ubuntu-latest'
     steps:
-      - name: Deploy to gh pages
+      - name: checkout code
         uses: action/checkout@v3
-      - run: npm install
-      - npm: npm run deploy
+      
+      - name: install packages
+        run: npm install
+
+      - name: Deploy to gh pages
+        run: npm run deploy
