--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,12 @@ on:
 jobs:
   test:
     name: Run tests
-    runs-on: [ 'ubuntu-latest', 'windows-latest' ]
+    runs-on: 'ubuntu-latest'
     steps:
       - name: checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
+        with:
+          repository: n4-t3/React-Clock
 
       - name: install packages
         run: npm install
@@ -24,7 +26,9 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
       - name: checkout code
-        uses: action/checkout@v3
+        uses: action/checkout@v2
+        with:
+          repository: n4-t3/React-Clock
       
       - name: install packages
         run: npm install
