--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  test_and_deploy:
     name: Run tests
     runs-on: 'ubuntu-latest'
     steps:
@@ -17,7 +17,7 @@ jobs:
           repository: n4-t3/React-Clock
 
       - name: install packages
-        run: npm ci
+        run: npm install
 
       - name: run test
         run: npm run test
@@ -25,18 +25,8 @@ jobs:
       - name: test build
         run: npm run build
 
-  deploy:
-    runs-on: 'ubuntu-latest'
-    steps:
-      - name: checkout code
-        uses: action/checkout@v3
-        with:
-          repository: n4-t3/React-Clock
-      
-      - name: install packages
-        run: npm install
-
       - name: Deploy to gh pages
+        run: npm run deploy
         with: 
           target_branch: gh-pages
           build_dir: build
