--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           publish_dir: ./build
 
   check_merge_and_deploy:
-    needs: test, merge
+    needs: [test, merge]
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.ref == 'refs/heads/develop'
 
