--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,59 +20,34 @@ jobs:
       - name: Run test
         run: npm test
 
-  merge:
-    needs: test
+  merge_and_deploy:
+    needs: [test]
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/develop'
+    if: (github.event_name == 'pull_request' && github.ref == 'refs/heads/develop') || (github.event_name == 'push' && github.ref == 'refs/heads/develop')
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Merge PR
-        uses: phillipj/git-merge-on-success@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-  deploy:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Build and deploy to GitHub Pages
-        run: |
-          npm run build
-          echo "n4-t3.github.io/React-Clock" > ./build/CNAME
+      - name: Merge PR and Deploy
         env:
-          CI: false
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
-
-  check_merge_and_deploy:
-    needs: merge
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/develop'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Build and deploy to GitHub Pages
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          npm run build
-          echo "n4-t3.github.io/React-Clock" > ./build/CNAME
-        env:
-          CI: false
+          # Check if it's a pull request or a direct push to develop
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            # Automatically merge the PR
+            gh pr merge ${{ github.event.number }} --auto --delete-branch
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+            # Deploy to GitHub Pages
+            npm install
+            npm run build
+            echo "n4-t3.github.io/React-Clock" > ./build/CNAME
+            npx gh-pages -d build -b gh-pages
+            
+          elif [ "${{ github.event_name }}" == "push" ]; then
+            # Deploy to GitHub Pages for direct pushes to 'develop'
+            npm install
+            npm run build
+            echo "n4-t3.github.io/React-Clock" > ./build/CNAME
+            npx gh-pages -d build -b gh-pages
+          fi
