--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,25 +29,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Merge PR and Deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Merge if PR to Develop
         run: |
           # Check if it's a pull request or a direct push to develop
           if [ "${{ github.event_name }}" == "pull_request" ]; then
             # Automatically merge the PR
             gh pr merge ${{ github.event.number }} --auto --delete-branch
-
-            # Deploy to GitHub Pages
-            npm install
-            npm run build
-            echo "n4-t3.github.io/React-Clock" > ./build/CNAME
-            npx gh-pages -d build -b gh-pages
-            
-          elif [ "${{ github.event_name }}" == "push" ]; then
-            # Deploy to GitHub Pages for direct pushes to 'develop'
-            npm install
-            npm run build
-            echo "n4-t3.github.io/React-Clock" > ./build/CNAME
-            npx gh-pages -d build -b gh-pages
           fi
+
+      - name: Deploy with gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
