--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,9 +35,10 @@ jobs:
         run: |
           # Check if it's a pull request or a direct push to develop
           if [ "${{ github.event_name }}" == "pull_request" ]; then
-            if [ "${{ github.ref }}" == "refs/heads/develop" ] ; then
+            PR_REF="${GITHUB_REF/refs\/pull\/${{ github.event.pull_request.number }}\/merge/refs/heads}"
+            if [[ "$PR_REF" == "refs/heads/develop" ]] ; then
               # Automatically merge the PR
-              gh pr merge ${{ github.event.number }} --auto --delete-branch
+              gh pr merge ${{ github.event.pull_request.number }} --auto --delete-branch
             fi
           fi
 
