--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr merge ${{ github.event.pull_request.number }} --auto --delete-branch
+          gh pr merge ${{ github.event.pull_request.number }} --auto --delete-branch --squash
 
       - name: Deploy with gh-pages
         env:
